# lckd

./: .env.example  .gitignore  .vercelignore  KNOWN_ISSUES.md  README.md  STATE.md  TASKS.md  eslint.config.mjs  hardhat.config.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  railway.json  security_best_practices_report.md  sentry.server.config.ts  trudev-fun.jsx  vercel.json
.design/token-launch-polish/: DESIGN_BRIEF.md  TASKS.md
.github/workflows/: deploy.yml
e2e/: proof-missions.spec.ts  public-routes.spec.ts  trade-readiness.spec.ts
programs/buyback-burn/: .gitignore  Cargo.toml
programs/buyback-burn/ops/: setup-mainnet.ts  simulate-mainnet-preview.ts
programs/buyback-burn/src/: accounts.rs  constants.rs  error.rs  instruction.rs  lib.rs  token.rs
public/: trudev-prdr.docx
src/: instrumentation-client.ts  proxy.ts
src/app/: error.tsx  globals.css  layout.tsx  not-found.tsx  opengraph-image.alt.txt  page.tsx  robots.ts  sitemap.ts
src/hooks/: useClaimFees.ts  useDexMarketData.test.ts  useDexMarketData.ts  useLaunchWizard.ts  useOfficialLaunchMonitor.ts  useTokenLaunch.ts
src/lib/: accountAge.ts  burnLedger.test.ts  burnLedger.ts  dexscreener.ts  inAppBrowser.ts  jupiter.ts  launchAvailability.test.ts  launchAvailability.ts  launchMetadataDraft.test.ts  launchMetadataDraft.ts  launchMonitor.ts  (+17 more)
tools/: README.md  backfill-locks.test.ts  backfill-locks.ts  register-helius-webhook.test.ts  register-helius-webhook.ts  sas-devnet-e2e.ts
workers/: launch-monitor-http.ts  launch-monitor-state-store.ts  solana-launch-monitor.ts
(+323 files in other folders)
